--- a/discord/index.html
+++ b/discord/index.html
@@ -3,29 +3,131 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>กำลังเปลี่ยนเส้นทางไปยัง Discord...</title>
-
-    <meta http-equiv="refresh" content="0; url=https://discord.gg/BcDYq8QEBJ">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>กำลังเข้าร่วม Discord...</title>
+
+    <link rel="icon" href="media/icon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            font-family: sans-serif;
-            text-align: center;
-            padding-top: 50px;
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: 'Kanit', sans-serif;
+            cursor: url('media/cursor.gif'), auto;
         }
 
-        a {
-            color: #5865F2;
+        .background-video {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -1;
+            transform: translateX(-50%) translateY(-50%);
+            object-fit: cover;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            padding: 20px;
+            color: white;
+            text-align: center;
+            position: relative;
+            z-index: 2;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            padding: 40px 50px;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+            max-width: 600px;
+            width: 100%;
+        }
+
+        .title {
+            font-size: 40px;
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
+        }
+
+        .message {
+            font-size: 18px;
+            margin-bottom: 25px;
+        }
+
+        /* --- ✨ สไตล์สำหรับตัวนับถอยหลัง --- */
+        #countdown {
+            font-size: 24px;
+            font-weight: bold;
+            color: #ffc0cb;
+        }
+
+        .discord-link {
+            font-size: 16px;
+            color: #ffc0cb;
+            text-decoration: none;
+            word-break: break-all;
+            cursor: url('media/pointer.gif'), pointer;
+            transition: color 0.3s;
+        }
+
+        .discord-link:hover {
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <h1>กำลังนำท่านไปยังเซิร์ฟเวอร์ Discord</h1>
-    <p>หากหน้าเว็บไม่เปลี่ยนไปโดยอัตโนมัติ, กรุณาคลิกที่ลิงค์นี้:</p>
-    <p><a href="https://discord.gg/BcDYq8QEBJ">https://discord.gg/BcDYq8QEBJ</a></p>
+
+    <video class="background-video" autoplay muted loop>
+        <source src="/media/background.mp4" type="video/mp4">
+    </video>
+
+    <div class="content">
+        <div class="card">
+            <div class="title">กำลังพาไปยัง Discord</div>
+            <p class="message">
+                จะนำท่านไปยังเซิร์ฟเวอร์ในอีก <span id="countdown">3</span> วินาที...
+            </p>
+            <p>หากหน้าเว็บไม่เปลี่ยนไปอัตโนมัติ, กรุณาคลิกที่ลิงก์นี้:</p>
+            <a href="https://discord.gg/txDuG79k6p" class="discord-link">
+                https://discord.gg/txDuG79k6p
+            </a>
+        </div>
+    </div>
+
+    <script>
+        (function () {
+            let seconds = 3;
+            const countdownElement = document.getElementById('countdown');
+            const discordLink = 'https://discord.gg/txDuG79k6p';
+
+            const interval = setInterval(() => {
+                seconds--;
+                countdownElement.textContent = seconds;
+
+                if (seconds <= 0) {
+                    clearInterval(interval);
+                    window.location.href = discordLink;
+                }
+            }, 1000); // ทำงานทุกๆ 1 วินาที
+        })();
+    </script>
+
 </body>
 
 </html>
