--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             </div>
             <div class="ip-container">
                 <div class="ip" id="ip">
-                    IP : <span class="ip-address">play.nattapat2871.me</span>
+                    IP : <span class="ip-address">playmc.nattapat2871.me</span>
                     <span class="ip-tooltip" id="ip-tooltip">คลิกเพื่อคัดลอก</span>
                 </div>
                 <div id="server-details">
