--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', function () {
-            const serverAddress = "play.nattapat2871.me";
+            const serverAddress = "playmc.nattapat2871.me";
             const apiUrl = `https://api.mcsrvstat.us/3/${serverAddress}`;
             const serverDetailsElement = document.getElementById('server-details');
             const serverIconElement = document.getElementById('server-icon');
